Improve screen resolution

--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,8 @@
       #gameScreen {
         background: #000;
         position: relative;
-        width: min(100vw, 133vh);
-        height: min(100vh, 75vw);
+        width: min(100vw, calc(100vh * 16 / 9));
+        height: min(100vh, calc(100vw * 9 / 16));
         display: none;
       }
 
