Fix bullet afterlife

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>Dungeon Game</title>
+    <title>Dungerra</title>
     <style>
       body {
         margin: 0;
@@ -405,7 +405,7 @@
   <body>
     <div id="loginScreen" class="screen">
       <img class="logo" src="favicon.png" alt="" width="100" />
-      <h1>Dungeon Game</h1>
+      <h1>Dungerra</h1>
       <p id="loader">Loading...</p>
       <div class="button-container">
         <button id="loginButton">Login with Google</button>
@@ -414,7 +414,7 @@
     </div>
     <div id="leaderboardScreen" class="screen">
       <img class="logo" src="favicon.png" alt="" width="100" />
-      <h1>Dungeon Game</h1>
+      <h1>Dungerra</h1>
       <p>Welcome, <span id="username"></span>!</p>
       <div class="tabs">
         <button class="tab-button active" id="sessionsTab">Sessions</button>
