--- a/src/index.html
+++ b/src/index.html
@@ -13,62 +13,8 @@
     />
 
     <title>Dungerra</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="loginScreen" class="screen">
-      <img class="logo" src="favicon.png" alt="" width="100" />
-      <h1>Dungerra</h1>
-      <p id="loader">Loading...</p>
-      <div class="button-container">
-        <button id="loginButton">Login with Google</button>
-        <p class="error"></p>
-      </div>
-    </div>
-    <div id="leaderboardScreen" class="screen">
-      <img class="logo" src="favicon.png" alt="" width="100" />
-      <h1>Dungerra</h1>
-      <p>Welcome, <span id="username"></span>!</p>
-      <div class="tabs">
-        <button class="tab-button active" id="sessionsTab">Sessions</button>
-        <button class="tab-button" id="leaderboardTab">Leaderboard</button>
-      </div>
-      <div id="sessions">
-        <ul class="sessions-list" id="sessionsList">
-          <!-- Session entries will be added here dynamically -->
-        </ul>
-      </div>
-      <div id="leaderboard">
-        <ul class="leaderboard-list" id="leaderboardList">
-          <!-- Leaderboard entries will be added here dynamically -->
-        </ul>
-      </div>
-      <div class="button-container">
-        <button id="startGameButton">New Game</button>
-        <p class="error"></p>
-      </div>
-    </div>
-    <div id="gameScreen" class="screen">
-      <canvas id="gameCanvas" class="gameCanvas"></canvas>
-      <canvas id="lightCanvas" class="gameCanvas"></canvas>
-      <canvas id="uiCanvas" class="gameCanvas"></canvas>
-    </div>
-    <div id="sessionNameModal" class="modal">
-      <div class="modal-content">
-        <h2>Create New Game</h2>
-        <input
-          type="text"
-          id="sessionNameInput"
-          placeholder="Enter session name..."
-          maxlength="50"
-        />
-        <div class="modal-buttons">
-          <button id="cancelSessionButton" class="button-secondary">
-            Cancel
-          </button>
-          <button id="createSessionButton">Create</button>
-        </div>
-      </div>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
